crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__quantifiers_repeat_navigation.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (function_declaration (decorator)* @decs)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "decs"
S2 "Test"
S3 "function_declaration"
S4 "decorator"

[type_defs]
T0 = <Node>
T1 = ArrayStar(T0)  ; <Node>*
T2 = Struct  M0:1  ; { decs }

[type_members]
M0: S1 → T1  ; decs: T1

[type_names]
N0: S2 → T2  ; Test

[entrypoints]
Test = 06 :: T2

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (function_declaration)           08
  08   ε   [Arr]                            10
  10   ε                                    27, 20
  12   ε   [EndArr Set(M0)]                 14
  14   △   _                                19
  15   !   (decorator) [Node Push]          17
  17   ε                                    33, 12
  19                                        ▶
  20   ε   [EndArr Set(M0)]                 19
  22   ▷   _                                25
  23   ε                                    22, 12
  25   ε                                    15, 23
  27   ▽   _                                25
  28   ▷   _                                31
  29   ε                                    28, 12
  31   ε                                    15, 29
  33   ▷   _                                31
